--- a/all.css
+++ b/all.css
@@ -40,7 +40,7 @@ div.centre {
 .section .center {
 	text-align: center;
 	margin: 0 auto;
-	width: 50%;
+   width: 75%;
 	-webkit-transform: translate3d(0,0,0px);
 }
 .section .heading {
@@ -477,6 +477,12 @@ ul, ol {
 /*
 	Compétences
 */
+
+dt.small-text{
+   width: auto !important;
+   padding: 1px 1px;
+}
+
 @media only screen and (max-width:1580px) {
 	dl.skills-diagram{
 		max-width: 54%;
