Calcul automatique du nombre d'année d'experience

--- a/cv/cv_greg.css
+++ b/cv/cv_greg.css
@@ -93,7 +93,7 @@ div.clear{
 	color:white;
 }
 
-.header .div_description_infos span{
+.header .div_description_infos span.info{
 	float: right;
 	margin-top: 9px;
 	width: 90%;
