Section "Autres" en gris

--- a/cv/cv_greg.css
+++ b/cv/cv_greg.css
@@ -261,6 +261,7 @@ div.clear{
 .content .content_right .autres {
 	margin-left: 3%;
 	text-align:left;
+	color: rgb(128,128,128);
 }
 .content .content_right .autres .autre {
 	margin-top:5%;
