--- a/all.css
+++ b/all.css
@@ -746,3 +746,51 @@ a.social{
 	transition-duration: 0.3s;
 	cursor: context-menu;
 }
+
+/* Go top */
+
+.go-top {
+	position: fixed;
+	top: 1em;
+	right: 1em;
+	text-decoration: none;
+	color: white;
+	background-color: rgba(0, 0, 0, 0.25);
+	font-size: 27px;
+	border-radius: 50%;
+	width: 56px;
+	height: 56px;
+	justify-content: center;
+	align-items: center;
+	display: none;
+	transition: background-color 0.1s ease-in;
+}
+
+.go-top:hover {
+	background-color: rgba(0, 0, 0, 0.4);
+}
+.go-top i{
+	height: 28px;
+}
+
+.up-and-down {
+	animation: up-and-down 2s linear infinite;
+	position: absolute;
+	left: 14px;
+	bottom: 0;
+}
+
+@keyframes up-and-down {
+	0% {
+		bottom: 14px;
+	}
+	5% {
+		bottom: 17px;
+	}
+	15% {
+		bottom: 12px;
+	}
+	20%, 100% {
+		bottom: 14px;
+	}
+}
